--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ian Campbell <iancam92@icloud.com>",
   "license": "MIT",
   "dependencies": {
+    "flyd": "^0.2.8",
     "lit-html": "^1.0.0"
   }
 }
